Move more code out of TimelineAnalysisView

--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -44,6 +44,7 @@ body {
 <link rel="stylesheet" href="tracing/tracks/ruler_track.css">
 <link rel="stylesheet" href="tracing/timeline_track_view.css">
 <link rel="stylesheet" href="tracing/analysis/slice_analysis.css">
+<link rel="stylesheet" href="tracing/analysis/analysis_results.css">
 <link rel="stylesheet" href="tracing/timeline_analysis_view.css">
 <link rel="stylesheet" href="tracing/timeline_view.css">
 <link rel="stylesheet" href="about_tracing/profiling_view.css">
