Add and plumb ObjectInstanceView and ObjectSnapshotView to TimelineAnalysisView
ObjectInstanceView and ObjectSnapshotView provide a base class for analyzing
single object selections. They have a type registry to have specific object
typeNames with specific view subclasses. When no typeName is registered, the
views provided by tracing.analysis.default_object_view are used.

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -28,7 +28,9 @@ found in the LICENSE file.
     'tracing/timeline_view_test.html',
     'tracing/timeline_viewport_test.html',
 
+    'tracing/analysis/analysis_results_test.html',
     'tracing/analysis/counter_analysis_test.html',
+    'tracing/analysis/default_object_view_test.html',
     'tracing/analysis/slice_analysis_test.html',
 
     'tracing/model_test.html',
