--- a/trunk/src/tracing/analysis/analyze_counters_test.html
+++ b/trunk/src/tracing/analysis/analyze_counters_test.html
@@ -15,8 +15,7 @@ found in the LICENSE file.
     base.require('tracing.test_utils');
     base.require('tracing.analysis.analysis_view');
     base.require('tracing.analysis.stub_analysis_results');
-    base.require('tracing.analysis.counter_analysis');
-    base.require('tracing.analysis.selection_analysis');
+    base.require('tracing.analysis.analyze_counters');
     base.require('tracing.selection');
     base.require('tracing.model');
   </script>
