Bring in ListView, ListAndAssociatedView, and DragHandle from ccfv

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -15,6 +15,8 @@ found in the LICENSE file.
 
     'ui_test.html',
     'ui/overlay_test.html',
+    'ui/list_and_associated_view_test.html',
+    'ui/list_view_test.html',
 
     'about_tracing/profiling_view_test.html',
 
