--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -46,6 +46,7 @@ body {
 <link rel="stylesheet" href="tracing/tracks/model_track.css">
 <link rel="stylesheet" href="tracing/tracks/ruler_track.css">
 <link rel="stylesheet" href="tracing/timeline_track_view.css">
+<link rel="stylesheet" href="ui/drag_handle.css">
 <link rel="stylesheet" href="tracing/timeline_view.css">
 <link rel="stylesheet" href="about_tracing/profiling_view.css">
 
