Implement functional DefaultObjectViews

--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -35,7 +35,9 @@ body {
 <link rel="stylesheet" href="ui/overlay.css">
 <link rel="stylesheet" href="about_tracing/tracing_controller.css">
 <link rel="stylesheet" href="tracing/analysis/analyze_slices.css">
+<link rel="stylesheet" href="tracing/analysis/analysis_link.css">
 <link rel="stylesheet" href="tracing/analysis/analysis_results.css">
+<link rel="stylesheet" href="tracing/analysis/default_object_view.css">
 <link rel="stylesheet" href="tracing/analysis/analysis_view.css">
 <link rel="stylesheet" href="tracing/tracks/track.css">
 <link rel="stylesheet" href="tracing/tracks/canvas_based_track.css">
