Add bbox2, color, gl_matrix and rect2 from ccfv

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -9,6 +9,9 @@ found in the LICENSE file.
 <title>All Tracing Tests</title>
 <script>
   G_allTests = [
+    'base/bbox2_test.html',
+    'base/color_test.html',
+    'base/gl_matrix_test.html',
     'base/range_test.html',
     'base/unittest_test.html',
     'base/sorted_array_utils_test.html',
