Add test data set for ccfv integration

--- a/trunk/src/interactive_tests.html
+++ b/trunk/src/interactive_tests.html
@@ -31,6 +31,9 @@ found in the LICENSE file.
   <div class="test" src="../test_data/huge_trace.json">
   </div>
 
+  <div class="test" src="../test_data/lthi_cats.json">
+  </div>
+
   <div class="test" src="../test_data/main_thread_has_unclosed_slices.json">
   </div>
 
