Add QuadView from ccfv

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -23,6 +23,9 @@ found in the LICENSE file.
 
     'about_tracing/profiling_view_test.html',
 
+    'cc/quad_view_test.html',
+    'cc/quad_view_viewport_test.html',
+
     'tracing/category_filter_dialog_test.html',
     'tracing/filter_test.html',
     'tracing/find_control_test.html',
