Add and bind up stub layer_tree_host_impl_view. Will use real view in followup.

--- a/trunk/src/interactive_tests.html
+++ b/trunk/src/interactive_tests.html
@@ -44,8 +44,10 @@ found in the LICENSE file.
   </div>
 
   <script>
-  base.require('tracing.timeline_view');
-
+    base.require('about_tracing.profiling_view'); /* For deps */
+    base.require('tracing.timeline_view');
+  </script>
+  <script>
   function getAsync(url, cb) {
     var req = new XMLHttpRequest();
     req.open('GET', url, true);
