--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -25,6 +25,7 @@ found in the LICENSE file.
 
     'cc/quad_view_test.html',
     'cc/quad_view_viewport_test.html',
+    'cc/layer_tree_host_impl_view_test.html',
 
     'tracing/category_filter_dialog_test.html',
     'tracing/filter_test.html',
