--- a/trunk/examples/stream_trace_viewer.html
+++ b/trunk/examples/stream_trace_viewer.html
@@ -23,10 +23,10 @@ found in the LICENSE file.
 </head>
 <body>
 <script>
-  base.require('unittest');
-  base.require('test_utils');
-  base.require('timeline_view');
-  base.require('importer.timeline_stream_importer');
+  base.require('base.unittest');
+  base.require('tracing.test_utils');
+  base.require('tracing.timeline_view');
+  base.require('tracing.importer.timeline_stream_importer');
 </script>
 <script>
   'use strict';
