--- a/trunk/src/tracing/analysis/analyze_slices_test.html
+++ b/trunk/src/tracing/analysis/analyze_slices_test.html
@@ -26,8 +26,8 @@ found in the LICENSE file.
     var Selection = tracing.Selection;
     var AnalysisView = tracing.analysis.AnalysisView;
     var StubAnalysisResults = tracing.analysis.StubAnalysisResults;
-    var newSliceNamed = test_utils.newSliceNamed;
-    var newSliceCategory = test_utils.newSliceCategory;
+    var newSliceNamed = tracing.test_utils.newSliceNamed;
+    var newSliceCategory = tracing.test_utils.newSliceCategory;
 
     function createSelectionWithSingleSlice(withCategory) {
       var model = new Model();
