--- a/trunk/src/tracing/find_control_test.html
+++ b/trunk/src/tracing/find_control_test.html
@@ -24,7 +24,7 @@ found in the LICENSE file.
 <script>
     'use strict';
 
-    var newSliceNamed = test_utils.newSliceNamed;
+    var newSliceNamed = tracing.test_utils.newSliceNamed;
 
     /*
      * Just enough of the Timeline to support the tests below.
