--- a/trunk/src/tracing/model/slice_group_test.html
+++ b/trunk/src/tracing/model/slice_group_test.html
@@ -20,8 +20,8 @@ found in the LICENSE file.
 
   var Slice = tracing.model.Slice;
   var SliceGroup = tracing.model.SliceGroup;
-  var newSlice = test_utils.newSlice;
-  var newSliceNamed = test_utils.newSliceNamed;
+  var newSlice = tracing.test_utils.newSlice;
+  var newSliceNamed = tracing.test_utils.newSliceNamed;
 
   function testBasicBeginEnd() {
     var group = new SliceGroup();
