--- a/trunk/src/tracing/timeline_view_test.html
+++ b/trunk/src/tracing/timeline_view_test.html
@@ -19,7 +19,7 @@ found in the LICENSE file.
   <script>
     'use strict';
 
-    var newSliceNamed = test_utils.newSliceNamed;
+    var newSliceNamed = tracing.test_utils.newSliceNamed;
 
     function createFullyPopulatedModel(opt_withError, opt_withMetadata) {
       var withError = opt_withError !== undefined ? opt_withError : true;
