--- a/trunk/src/tracing/tracks/slice_group_track_test.html
+++ b/trunk/src/tracing/tracks/slice_group_track_test.html
@@ -21,7 +21,7 @@ found in the LICENSE file.
 
   var SliceGroup = tracing.model.SliceGroup;
   var SliceGroupTrack = tracing.tracks.SliceGroupTrack;
-  var newSliceNamed = test_utils.newSliceNamed;
+  var newSliceNamed = tracing.test_utils.newSliceNamed;
 
   function testSubRowBuilderBasic() {
     var group = new SliceGroup();
