--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -25,8 +25,7 @@ found in the LICENSE file.
   </div>
 
   <script>
-  base.require('timeline_view');
-  base.require('test_utils');
+  base.require('tracing.timeline_view');
   </script>
   <script>
   'use strict';
@@ -41,7 +40,7 @@ found in the LICENSE file.
     var numTracesPending = filenames.length;
 
     filenames.forEach(function(filename, i) {
-      test_utils.getAsync(filename, function(trace) {
+      getAsync(filename, function(trace) {
         traces[i] = trace;
         numTracesPending--;
         if (numTracesPending == 0)
@@ -50,12 +49,29 @@ found in the LICENSE file.
     });
   }
 
+  function getAsync(url, cb) {
+    var req = new XMLHttpRequest();
+    req.open('GET', url, true);
+    req.onreadystatechange = function(aEvt) {
+      if (req.readyState == 4) {
+        window.setTimeout(function() {
+          if (req.status == 200) {
+            cb(req.responseText);
+          } else {
+            console.log('Failed to load ' + url);
+          }
+        }, 0);
+      }
+    };
+    req.send(null);
+  }
+
   function createViewFromTraces(traces) {
     var m = new tracing.Model();
     m.importTraces(traces, true);
 
     timelineViewEl = document.querySelector('.view');
-    tracing.ui.decorate(timelineViewEl, tracing.TimelineView);
+    ui.decorate(timelineViewEl, tracing.TimelineView);
     timelineViewEl.model = m;
     timelineViewEl.tabIndex = 1;
     timelineViewEl.timeline.focusElement = timelineViewEl;
