--- a/trunk/src/tracing/analysis/analysis_view_test.html
+++ b/trunk/src/tracing/analysis/analysis_view_test.html
@@ -23,7 +23,7 @@ found in the LICENSE file.
     var Model = tracing.Model;
     var Selection = tracing.Selection;
     var AnalysisView = tracing.analysis.AnalysisView;
-    var newSliceNamed = test_utils.newSliceNamed;
+    var newSliceNamed = tracing.test_utils.newSliceNamed;
 
     function testAnalyzeSelectionWithFalsyArgs() {
       var model = new Model();
