--- a/trunk/src/tracing/filter_test.html
+++ b/trunk/src/tracing/filter_test.html
@@ -24,51 +24,51 @@ found in the LICENSE file.
   var CategoryFilter = tracing.CategoryFilter;
 
   function testTitleFilter() {
-    var s0 = test_utils.newSlice(1, 3);
+    var s0 = tracing.test_utils.newSlice(1, 3);
     assertFalse(new TitleFilter('').matchSlice(s0));
 
     assertTrue(new TitleFilter('a').matchSlice(s0));
     assertFalse(new TitleFilter('x').matchSlice(s0));
 
-    var s1 = test_utils.newSliceNamed('ba', 1, 3);
+    var s1 = tracing.test_utils.newSliceNamed('ba', 1, 3);
     assertTrue(new TitleFilter('a').matchSlice(s1));
     assertTrue(new TitleFilter('ba').matchSlice(s1));
     assertFalse(new TitleFilter('x').matchSlice(s1));
 
-    var c0 = test_utils.newCounter(null);
+    var c0 = tracing.test_utils.newCounter(null);
     assertFalse(new TitleFilter('').matchCounter(c0));
 
     assertTrue(new TitleFilter('a').matchCounter(c0));
     assertFalse(new TitleFilter('x').matchCounter(c0));
 
-    var c1 = test_utils.newCounterNamed(null, 'ba');
+    var c1 = tracing.test_utils.newCounterNamed(null, 'ba');
     assertTrue(new TitleFilter('a').matchCounter(c1));
     assertTrue(new TitleFilter('ba').matchCounter(c1));
     assertFalse(new TitleFilter('x').matchCounter(c1));
   }
 
   function testCategoryFilter() {
-    var sNoCategory = test_utils.newSlice(1, 3);
+    var sNoCategory = tracing.test_utils.newSlice(1, 3);
     sNoCategory.category = undefined;
     assertTrue(new CategoryFilter(['x']).matchSlice(sNoCategory));
 
-    var s0 = test_utils.newSlice(1, 3);
+    var s0 = tracing.test_utils.newSlice(1, 3);
     s0.category = 'x';
     assertFalse(new CategoryFilter(['x']).matchSlice(s0));
 
-    var s1 = test_utils.newSliceNamed('ba', 1, 3);
+    var s1 = tracing.test_utils.newSliceNamed('ba', 1, 3);
     s1.category = 'y';
     assertTrue(new CategoryFilter(['x']).matchSlice(s1));
     assertFalse(new CategoryFilter(['y']).matchSlice(s1));
     assertFalse(new CategoryFilter(['x', 'y']).matchSlice(s1));
 
-    var cNoCategory = test_utils.newCounterCategory(null, undefined, 'a');
+    var cNoCategory = tracing.test_utils.newCounterCategory(null, undefined, 'a');
     assertTrue(new CategoryFilter(['x']).matchCounter(cNoCategory));
 
-    var c0 = test_utils.newCounterCategory(null, 'x', 'a');
+    var c0 = tracing.test_utils.newCounterCategory(null, 'x', 'a');
     assertFalse(new CategoryFilter(['x']).matchCounter(c0));
 
-    var c1 = test_utils.newCounterCategory(null, 'y', 'ba');
+    var c1 = tracing.test_utils.newCounterCategory(null, 'y', 'ba');
     assertTrue(new CategoryFilter(['x']).matchCounter(c1));
     assertFalse(new CategoryFilter(['y']).matchCounter(c1));
     assertFalse(new CategoryFilter(['x', 'y']).matchCounter(c1));
@@ -76,10 +76,10 @@ found in the LICENSE file.
 
   function testFilterSliceArray() {
     var slices = [
-      test_utils.newSliceNamed('ba', 1, 3),
-      test_utils.newSliceNamed('ab', 1, 3),
-      test_utils.newSliceNamed('x', 1, 3),
-      test_utils.newSliceNamed('axa', 1, 3)
+      tracing.test_utils.newSliceNamed('ba', 1, 3),
+      tracing.test_utils.newSliceNamed('ab', 1, 3),
+      tracing.test_utils.newSliceNamed('x', 1, 3),
+      tracing.test_utils.newSliceNamed('axa', 1, 3)
     ];
     var filter = new TitleFilter('a');
     var matched = tracing.filterSliceArray(filter, slices);
@@ -91,10 +91,10 @@ found in the LICENSE file.
 
   function testFilterCounterArray() {
     var counters = [
-      test_utils.newCounterNamed(null, 'ba'),
-      test_utils.newCounterNamed(null, 'ab'),
-      test_utils.newCounterNamed(null, 'x'),
-      test_utils.newCounterNamed(null, 'axa')
+      tracing.test_utils.newCounterNamed(null, 'ba'),
+      tracing.test_utils.newCounterNamed(null, 'ab'),
+      tracing.test_utils.newCounterNamed(null, 'x'),
+      tracing.test_utils.newCounterNamed(null, 'axa')
     ];
     var filter = new TitleFilter('a');
     var matched = tracing.filterCounterArray(filter, counters);
