--- a/trunk/src/tracing/importer/trace_event_importer_test.html
+++ b/trunk/src/tracing/importer/trace_event_importer_test.html
@@ -18,7 +18,7 @@ found in the LICENSE file.
 <script>
 'use strict';
 
-var findSliceNamed = test_utils.findSliceNamed;
+var findSliceNamed = tracing.test_utils.findSliceNamed;
 
 function testCanImportEmpty() {
   self.assertFalse(tracing.importer.TraceEventImporter.canImport([]));
