--- a/trunk/src/tracing/importer/v8_log_importer_test.html
+++ b/trunk/src/tracing/importer/v8_log_importer_test.html
@@ -18,7 +18,7 @@ found in the LICENSE file.
 <script>
 'use strict';
 
-var findSliceNamed = test_utils.findSliceNamed;
+var findSliceNamed = tracing.test_utils.findSliceNamed;
 var V8LogImporter = tracing.importer.V8LogImporter;
 
 function testTickEventInSharedLibrary() {
