--- a/trunk/src/tracing/model/cpu_test.html
+++ b/trunk/src/tracing/model/cpu_test.html
@@ -30,7 +30,7 @@ found in the LICENSE file.
 
   function testCpuBounds_OneSlice() {
     var cpu = new Cpu(undefined, 1);
-    cpu.slices.push(test_utils.newSlice(1, 3));
+    cpu.slices.push(tracing.test_utils.newSlice(1, 3));
     cpu.updateBounds();
     assertEquals(1, cpu.bounds.min);
     assertEquals(4, cpu.bounds.max);
@@ -46,13 +46,13 @@ found in the LICENSE file.
   function testShiftTimestampsForward() {
     var cpu = new Cpu(undefined, 1);
     var ctr = cpu.getOrCreateCounter('foo', 'bar');
-    cpu.slices.push(test_utils.newSlice(1, 3));
+    cpu.slices.push(tracing.test_utils.newSlice(1, 3));
     var shiftCount = 0;
     ctr.shiftTimestampsForward = function(ts) {
       if (ts == 0.32)
         shiftCount++;
     };
-    cpu.slices.push(test_utils.newSlice(1, 3));
+    cpu.slices.push(tracing.test_utils.newSlice(1, 3));
     cpu.shiftTimestampsForward(0.32);
     assertEquals(shiftCount, 1);
     assertEquals(1.32, cpu.slices[0].start);
