--- a/trunk/src/tracing/model_test.html
+++ b/trunk/src/tracing/model_test.html
@@ -27,12 +27,12 @@ var TitleFilter = tracing.TitleFilter;
 function createModelWithOneOfEverything() {
   var m = new Model();
   var cpu = m.getOrCreateCpu(1);
-  cpu.slices.push(test_utils.newSlice(1, 3));
+  cpu.slices.push(tracing.test_utils.newSlice(1, 3));
 
   var p = m.getOrCreateProcess(1);
   var t = p.getOrCreateThread(1);
   t.pushSlice(new ThreadSlice('', 'a', 0, 1, {}, 4));
-  t.asyncSlices.push(test_utils.newAsyncSlice(0, 1, t, t));
+  t.asyncSlices.push(tracing.test_utils.newAsyncSlice(0, 1, t, t));
 
   var c = p.getOrCreateCounter('', 'ProcessCounter');
   c.seriesNames.push('a', 'b');
@@ -88,7 +88,7 @@ function testModelBounds_OneThreadAndOneEmptyThread() {
 function testModelBounds_OneCpu() {
   var m = new Model();
   var cpu = m.getOrCreateCpu(1);
-  cpu.slices.push(test_utils.newSlice(1, 3));
+  cpu.slices.push(tracing.test_utils.newSlice(1, 3));
   m.updateBounds();
   assertEquals(1, m.bounds.min);
   assertEquals(4, m.bounds.max);
@@ -98,7 +98,7 @@ function testModelBounds_OneCpu() {
 function testModelBounds_OneCpuOneThread() {
   var m = new Model();
   var cpu = m.getOrCreateCpu(1);
-  cpu.slices.push(test_utils.newSlice(1, 3));
+  cpu.slices.push(tracing.test_utils.newSlice(1, 3));
 
   var t = m.getOrCreateProcess(1).getOrCreateThread(1);
   t.pushSlice(new ThreadSlice('', 'a', 0, 1, {}, 4));
@@ -115,13 +115,13 @@ function testModelCanImportEmpty() {
 }
 
 function testTitleFilter() {
-  var s0 = test_utils.newSlice(1, 3);
+  var s0 = tracing.test_utils.newSlice(1, 3);
   assertFalse(new TitleFilter('').matchSlice(s0));
 
   assertTrue(new TitleFilter('a').matchSlice(s0));
   assertFalse(new TitleFilter('x').matchSlice(s0));
 
-  var s1 = test_utils.newSliceNamed('ba', 1, 3);
+  var s1 = tracing.test_utils.newSliceNamed('ba', 1, 3);
   assertTrue(new TitleFilter('a').matchSlice(s1));
   assertTrue(new TitleFilter('ba').matchSlice(s1));
   assertFalse(new TitleFilter('x').matchSlice(s1));
