--- a/trunk/src/tracing/tracks/thread_track_test.html
+++ b/trunk/src/tracing/tracks/thread_track_test.html
@@ -30,9 +30,9 @@ found in the LICENSE file.
   var ThreadSlice = tracing.model.ThreadSlice;
   var ThreadTrack = tracing.tracks.ThreadTrack;
   var Viewport = tracing.TimelineViewport;
-  var newAsyncSlice = test_utils.newAsyncSlice;
-  var newAsyncSliceNamed = test_utils.newAsyncSliceNamed;
-  var newSliceNamed = test_utils.newSliceNamed;
+  var newAsyncSlice = tracing.test_utils.newAsyncSlice;
+  var newAsyncSliceNamed = tracing.test_utils.newAsyncSliceNamed;
+  var newSliceNamed = tracing.test_utils.newSliceNamed;
 
   function testSelectionHitTestingWithThreadTrack() {
     var model = new tracing.Model();
