Add history support to the analysis view.
Currently if the back button is used we'll lose your trace data
as chrome navigates back to before chrome://tracing was accessed.

With this CL, we will push the current selection onto an internal
array which will be used to restore the previous selection if
you use the back button. If you make a new selection, it is also
possible to navigate back to the previous selection.

Selections are not highlighted in the timeline view as you navigate
through the history.

This will use more memory as we will hold onto each selection as
you navigate.

BUG=
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/9111043

--- a/trunk/src/base/unittest_test.html
+++ b/trunk/src/base/unittest_test.html
@@ -273,12 +273,12 @@ function testAssertObjectEquals() {
   var test = new TestCase(function() {
     rawAssertThrows(function() {
       assertObjectEquals({a: 1}, {a: 2});
-      assertObjectEquals({a: 1}, []});
+      assertObjectEquals({a: 1}, []);
     });
     rawAssertNotThrows(function() {
       assertObjectEquals({}, {});
       assertObjectEquals({a: 1}, {a: 1});
-      assertObjectEquals({a: 1, b: {}}, {a: 1, {}, b: {}});
+      assertObjectEquals({a: 1, b: {}}, {a: 1, c: {}, b: {}});
     });
   }, 'test_assert_true');
   var results = new FakeResults();
