Add test for loading of trace files.
This adds two simple tests to verify that sending JSON parsable
data through to loadTraceFileComplete will work and also that
sending non-JSON parsable data through will also output the
intended results.

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -22,6 +22,7 @@ found in the LICENSE file.
     'ui/list_view_test.html',
 
     'about_tracing/profiling_view_test.html',
+    'about_tracing/tracing_controller_test.html',
 
     'cc/quad_view_test.html',
     'cc/quad_view_viewport_test.html',
